--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.datasource.url=jdbc:postgresql://dpg-csqk93u8ii6s739igm50-a.oregon-postgr
 spring.datasource.username=shadowcards_user
 spring.datasource.password=kheF7jX8CHoF8KzqulANqFMzx4M0Puv0
 
-"security.jwt.secret-key": "qualquer texto que vc quiser colocar que vai servir como segredo",
-"security.jwt.expiration-time": 36000,
+security.jwt.secret-key: "qualquertextoquevcquisercolocarquevaiservircomosegredo"
+security.jwt.expiration-time: 36000
 
